--- a/spec.html
+++ b/spec.html
@@ -6880,6 +6880,124 @@
       1. Return PropName of |PropertyName|.
     </emu-alg>
   </emu-clause>
+
+  <emu-clause id="sec-runtime-semantics-propertydefinitionevaluation" type="sdo" aoid="PropertyDefinitionEvaluation">
+    <h1>Runtime Semantics: PropertyDefinitionEvaluation</h1>
+    <p>With parameters _object_ and _enumerable_.</p>
+    <emu-grammar>PropertyDefinitionList : PropertyDefinitionList `,` PropertyDefinition</emu-grammar>
+    <emu-alg>
+      1. Perform ? PropertyDefinitionEvaluation of |PropertyDefinitionList| with arguments _object_ and _enumerable_.
+      1. Return the result of performing PropertyDefinitionEvaluation of |PropertyDefinition| with arguments _object_ and _enumerable_.
+    </emu-alg>
+    <emu-grammar>PropertyDefinition : `...` AssignmentExpression</emu-grammar>
+    <emu-alg>
+      1. Let _exprValue_ be the result of evaluating |AssignmentExpression|.
+      1. Let _fromValue_ be ? GetValue(_exprValue_).
+      1. Let _excludedNames_ be a new empty List.
+      1. Return ? CopyDataProperties(_object_, _fromValue_, _excludedNames_).
+    </emu-alg>
+    <emu-grammar>PropertyDefinition : IdentifierReference</emu-grammar>
+    <emu-alg>
+      1. Let _propName_ be StringValue of |IdentifierReference|.
+      1. Let _exprValue_ be the result of evaluating |IdentifierReference|.
+      1. Let _propValue_ be ? GetValue(_exprValue_).
+      1. Assert: _enumerable_ is *true*.
+      1. Assert: _object_ is an ordinary, extensible object with no non-configurable properties.
+      1. Return ! CreateDataPropertyOrThrow(_object_, _propName_, _propValue_).
+    </emu-alg>
+    <emu-grammar>PropertyDefinition : PropertyName `:` AssignmentExpression</emu-grammar>
+    <emu-alg>
+      1. Let _propKey_ be the result of evaluating |PropertyName|.
+      1. ReturnIfAbrupt(_propKey_).
+      1. If IsAnonymousFunctionDefinition(|AssignmentExpression|) is *true*, then
+        1. Let _propValue_ be ? NamedEvaluation of |AssignmentExpression| with argument _propKey_.
+      1. Else,
+        1. Let _exprValueRef_ be the result of evaluating |AssignmentExpression|.
+        1. Let _propValue_ be ? GetValue(_exprValueRef_).
+      1. Assert: _enumerable_ is *true*.
+      1. Assert: _object_ is an ordinary, extensible object with no non-configurable properties.
+      1. Return ! CreateDataPropertyOrThrow(_object_, _propKey_, _propValue_).
+    </emu-alg>
+    <emu-note>
+      <p>An alternative semantics for this production is given in <emu-xref href="#sec-__proto__-property-names-in-object-initializers"></emu-xref>.</p>
+    </emu-note>
+    <emu-grammar>MethodDefinition : PropertyName `(` UniqueFormalParameters `)` `{` FunctionBody `}`</emu-grammar>
+    <emu-alg>
+      1. Let _methodDef_ be ? DefineMethod of |MethodDefinition| with argument _object_.
+      1. Perform SetFunctionName(_methodDef_.[[Closure]], _methodDef_.[[Key]]).
+      1. Let _desc_ be the PropertyDescriptor { [[Value]]: _methodDef_.[[Closure]], [[Writable]]: *true*, [[Enumerable]]: _enumerable_, [[Configurable]]: *true* }.
+      1. Return ? DefinePropertyOrThrow(_object_, _methodDef_.[[Key]], _desc_).
+    </emu-alg>
+    <emu-grammar>MethodDefinition : `get` PropertyName `(` `)` `{` FunctionBody `}`</emu-grammar>
+    <emu-alg>
+      1. Let _propKey_ be the result of evaluating |PropertyName|.
+      1. ReturnIfAbrupt(_propKey_).
+      1. Let _scope_ be the running execution context's LexicalEnvironment.
+      1. Let _sourceText_ be the source text matched by |MethodDefinition|.
+      1. Let _formalParameterList_ be an instance of the production <emu-grammar>FormalParameters : [empty]</emu-grammar>.
+      1. Let _closure_ be OrdinaryFunctionCreate(%Function.prototype%, _sourceText_, _formalParameterList_, |FunctionBody|, ~non-lexical-this~, _scope_).
+      1. Perform MakeMethod(_closure_, _object_).
+      1. Perform SetFunctionName(_closure_, _propKey_, *"get"*).
+      1. Let _desc_ be the PropertyDescriptor { [[Get]]: _closure_, [[Enumerable]]: _enumerable_, [[Configurable]]: *true* }.
+      1. Return ? DefinePropertyOrThrow(_object_, _propKey_, _desc_).
+    </emu-alg>
+    <emu-grammar>MethodDefinition : `set` PropertyName `(` PropertySetParameterList `)` `{` FunctionBody `}`</emu-grammar>
+    <emu-alg>
+      1. Let _propKey_ be the result of evaluating |PropertyName|.
+      1. ReturnIfAbrupt(_propKey_).
+      1. Let _scope_ be the running execution context's LexicalEnvironment.
+      1. Let _sourceText_ be the source text matched by |MethodDefinition|.
+      1. Let _closure_ be OrdinaryFunctionCreate(%Function.prototype%, _sourceText_, |PropertySetParameterList|, |FunctionBody|, ~non-lexical-this~, _scope_).
+      1. Perform MakeMethod(_closure_, _object_).
+      1. Perform SetFunctionName(_closure_, _propKey_, *"set"*).
+      1. Let _desc_ be the PropertyDescriptor { [[Set]]: _closure_, [[Enumerable]]: _enumerable_, [[Configurable]]: *true* }.
+      1. Return ? DefinePropertyOrThrow(_object_, _propKey_, _desc_).
+    </emu-alg>
+    <emu-grammar>GeneratorMethod : `*` PropertyName `(` UniqueFormalParameters `)` `{` GeneratorBody `}`</emu-grammar>
+    <emu-alg>
+      1. Let _propKey_ be the result of evaluating |PropertyName|.
+      1. ReturnIfAbrupt(_propKey_).
+      1. Let _scope_ be the running execution context's LexicalEnvironment.
+      1. Let _sourceText_ be the source text matched by |GeneratorMethod|.
+      1. Let _closure_ be OrdinaryFunctionCreate(%GeneratorFunction.prototype%, _sourceText_, |UniqueFormalParameters|, |GeneratorBody|, ~non-lexical-this~, _scope_).
+      1. Perform MakeMethod(_closure_, _object_).
+      1. Perform SetFunctionName(_closure_, _propKey_).
+      1. Let _prototype_ be ! OrdinaryObjectCreate(%GeneratorFunction.prototype.prototype%).
+      1. Perform DefinePropertyOrThrow(_closure_, *"prototype"*, PropertyDescriptor { [[Value]]: _prototype_, [[Writable]]: *true*, [[Enumerable]]: *false*, [[Configurable]]: *false* }).
+      1. Let _desc_ be the PropertyDescriptor { [[Value]]: _closure_, [[Writable]]: *true*, [[Enumerable]]: _enumerable_, [[Configurable]]: *true* }.
+      1. Return ? DefinePropertyOrThrow(_object_, _propKey_, _desc_).
+    </emu-alg>
+    <emu-grammar>
+      AsyncGeneratorMethod : `async` `*` PropertyName `(` UniqueFormalParameters `)` `{` AsyncGeneratorBody `}`
+    </emu-grammar>
+    <emu-alg>
+      1. Let _propKey_ be the result of evaluating |PropertyName|.
+      1. ReturnIfAbrupt(_propKey_).
+      1. Let _scope_ be the running execution context's LexicalEnvironment.
+      1. Let _sourceText_ be the source text matched by |AsyncGeneratorMethod|.
+      1. Let _closure_ be ! OrdinaryFunctionCreate(%AsyncGeneratorFunction.prototype%, _sourceText_, |UniqueFormalParameters|, |AsyncGeneratorBody|, ~non-lexical-this~, _scope_).
+      1. Perform ! MakeMethod(_closure_, _object_).
+      1. Perform ! SetFunctionName(_closure_, _propKey_).
+      1. Let _prototype_ be ! OrdinaryObjectCreate(%AsyncGeneratorFunction.prototype.prototype%).
+      1. Perform ! DefinePropertyOrThrow(_closure_, *"prototype"*, PropertyDescriptor { [[Value]]: _prototype_, [[Writable]]: *true*, [[Enumerable]]: *false*, [[Configurable]]: *false* }).
+      1. Let _desc_ be PropertyDescriptor { [[Value]]: _closure_, [[Writable]]: *true*, [[Enumerable]]: _enumerable_, [[Configurable]]: *true* }.
+      1. Return ? DefinePropertyOrThrow(_object_, _propKey_, _desc_).
+    </emu-alg>
+    <emu-grammar>
+      AsyncMethod : `async` PropertyName `(` UniqueFormalParameters `)` `{` AsyncFunctionBody `}`
+    </emu-grammar>
+    <emu-alg>
+      1. Let _propKey_ be the result of evaluating |PropertyName|.
+      1. ReturnIfAbrupt(_propKey_).
+      1. Let _scope_ be the LexicalEnvironment of the running execution context.
+      1. Let _sourceText_ be the source text matched by |AsyncMethod|.
+      1. Let _closure_ be ! OrdinaryFunctionCreate(%AsyncFunction.prototype%, _sourceText_, |UniqueFormalParameters|, |AsyncFunctionBody|, ~non-lexical-this~, _scope_).
+      1. Perform ! MakeMethod(_closure_, _object_).
+      1. Perform ! SetFunctionName(_closure_, _propKey_).
+      1. Let _desc_ be the PropertyDescriptor { [[Value]]: _closure_, [[Writable]]: *true*, [[Enumerable]]: _enumerable_, [[Configurable]]: *true* }.
+      1. Return ? DefinePropertyOrThrow(_object_, _propKey_, _desc_).
+    </emu-alg>
+  </emu-clause>
 <!-- insert sdos here -->
 </emu-clause>
 
@@ -13625,49 +13743,6 @@
           1. Return ? ToPropertyKey(_propName_).
         </emu-alg>
       </emu-clause>
-
-      <emu-clause id="sec-object-initializer-runtime-semantics-propertydefinitionevaluation">
-        <h1>Runtime Semantics: PropertyDefinitionEvaluation</h1>
-        <p>With parameters _object_ and _enumerable_.</p>
-        <emu-see-also-para op="PropertyDefinitionEvaluation"></emu-see-also-para>
-        <emu-grammar>PropertyDefinitionList : PropertyDefinitionList `,` PropertyDefinition</emu-grammar>
-        <emu-alg>
-          1. Perform ? PropertyDefinitionEvaluation of |PropertyDefinitionList| with arguments _object_ and _enumerable_.
-          1. Return the result of performing PropertyDefinitionEvaluation of |PropertyDefinition| with arguments _object_ and _enumerable_.
-        </emu-alg>
-        <emu-grammar>PropertyDefinition : `...` AssignmentExpression</emu-grammar>
-        <emu-alg>
-          1. Let _exprValue_ be the result of evaluating |AssignmentExpression|.
-          1. Let _fromValue_ be ? GetValue(_exprValue_).
-          1. Let _excludedNames_ be a new empty List.
-          1. Return ? CopyDataProperties(_object_, _fromValue_, _excludedNames_).
-        </emu-alg>
-        <emu-grammar>PropertyDefinition : IdentifierReference</emu-grammar>
-        <emu-alg>
-          1. Let _propName_ be StringValue of |IdentifierReference|.
-          1. Let _exprValue_ be the result of evaluating |IdentifierReference|.
-          1. Let _propValue_ be ? GetValue(_exprValue_).
-          1. Assert: _enumerable_ is *true*.
-          1. Assert: _object_ is an ordinary, extensible object with no non-configurable properties.
-          1. Return ! CreateDataPropertyOrThrow(_object_, _propName_, _propValue_).
-        </emu-alg>
-        <emu-grammar>PropertyDefinition : PropertyName `:` AssignmentExpression</emu-grammar>
-        <emu-alg>
-          1. Let _propKey_ be the result of evaluating |PropertyName|.
-          1. ReturnIfAbrupt(_propKey_).
-          1. If IsAnonymousFunctionDefinition(|AssignmentExpression|) is *true*, then
-            1. Let _propValue_ be ? NamedEvaluation of |AssignmentExpression| with argument _propKey_.
-          1. Else,
-            1. Let _exprValueRef_ be the result of evaluating |AssignmentExpression|.
-            1. Let _propValue_ be ? GetValue(_exprValueRef_).
-          1. Assert: _enumerable_ is *true*.
-          1. Assert: _object_ is an ordinary, extensible object with no non-configurable properties.
-          1. Return ! CreateDataPropertyOrThrow(_object_, _propKey_, _propValue_).
-        </emu-alg>
-        <emu-note>
-          <p>An alternative semantics for this production is given in <emu-xref href="#sec-__proto__-property-names-in-object-initializers"></emu-xref>.</p>
-        </emu-note>
-      </emu-clause>
     </emu-clause>
 
     <emu-clause id="sec-function-defining-expressions">
@@ -20252,44 +20327,6 @@
         1. Return the Record { [[Key]]: _propKey_, [[Closure]]: _closure_ }.
       </emu-alg>
     </emu-clause>
-
-    <emu-clause id="sec-method-definitions-runtime-semantics-propertydefinitionevaluation">
-      <h1>Runtime Semantics: PropertyDefinitionEvaluation</h1>
-      <p>With parameters _object_ and _enumerable_.</p>
-      <emu-see-also-para op="PropertyDefinitionEvaluation"></emu-see-also-para>
-      <emu-grammar>MethodDefinition : PropertyName `(` UniqueFormalParameters `)` `{` FunctionBody `}`</emu-grammar>
-      <emu-alg>
-        1. Let _methodDef_ be ? DefineMethod of |MethodDefinition| with argument _object_.
-        1. Perform SetFunctionName(_methodDef_.[[Closure]], _methodDef_.[[Key]]).
-        1. Let _desc_ be the PropertyDescriptor { [[Value]]: _methodDef_.[[Closure]], [[Writable]]: *true*, [[Enumerable]]: _enumerable_, [[Configurable]]: *true* }.
-        1. Return ? DefinePropertyOrThrow(_object_, _methodDef_.[[Key]], _desc_).
-      </emu-alg>
-      <emu-grammar>MethodDefinition : `get` PropertyName `(` `)` `{` FunctionBody `}`</emu-grammar>
-      <emu-alg>
-        1. Let _propKey_ be the result of evaluating |PropertyName|.
-        1. ReturnIfAbrupt(_propKey_).
-        1. Let _scope_ be the running execution context's LexicalEnvironment.
-        1. Let _sourceText_ be the source text matched by |MethodDefinition|.
-        1. Let _formalParameterList_ be an instance of the production <emu-grammar>FormalParameters : [empty]</emu-grammar>.
-        1. Let _closure_ be OrdinaryFunctionCreate(%Function.prototype%, _sourceText_, _formalParameterList_, |FunctionBody|, ~non-lexical-this~, _scope_).
-        1. Perform MakeMethod(_closure_, _object_).
-        1. Perform SetFunctionName(_closure_, _propKey_, *"get"*).
-        1. Let _desc_ be the PropertyDescriptor { [[Get]]: _closure_, [[Enumerable]]: _enumerable_, [[Configurable]]: *true* }.
-        1. Return ? DefinePropertyOrThrow(_object_, _propKey_, _desc_).
-      </emu-alg>
-      <emu-grammar>MethodDefinition : `set` PropertyName `(` PropertySetParameterList `)` `{` FunctionBody `}`</emu-grammar>
-      <emu-alg>
-        1. Let _propKey_ be the result of evaluating |PropertyName|.
-        1. ReturnIfAbrupt(_propKey_).
-        1. Let _scope_ be the running execution context's LexicalEnvironment.
-        1. Let _sourceText_ be the source text matched by |MethodDefinition|.
-        1. Let _closure_ be OrdinaryFunctionCreate(%Function.prototype%, _sourceText_, |PropertySetParameterList|, |FunctionBody|, ~non-lexical-this~, _scope_).
-        1. Perform MakeMethod(_closure_, _object_).
-        1. Perform SetFunctionName(_closure_, _propKey_, *"set"*).
-        1. Let _desc_ be the PropertyDescriptor { [[Set]]: _closure_, [[Enumerable]]: _enumerable_, [[Configurable]]: *true* }.
-        1. Return ? DefinePropertyOrThrow(_object_, _propKey_, _desc_).
-      </emu-alg>
-    </emu-clause>
   </emu-clause>
 
   <emu-clause id="sec-generator-function-definitions">
@@ -20441,26 +20478,6 @@
       <emu-note>
         <p>An anonymous |GeneratorDeclaration| can only occur as part of an `export default` declaration, and its function code is therefore always strict mode code.</p>
       </emu-note>
-    </emu-clause>
-
-    <emu-clause id="sec-generator-function-definitions-runtime-semantics-propertydefinitionevaluation">
-      <h1>Runtime Semantics: PropertyDefinitionEvaluation</h1>
-      <p>With parameters _object_ and _enumerable_.</p>
-      <emu-see-also-para op="PropertyDefinitionEvaluation"></emu-see-also-para>
-      <emu-grammar>GeneratorMethod : `*` PropertyName `(` UniqueFormalParameters `)` `{` GeneratorBody `}`</emu-grammar>
-      <emu-alg>
-        1. Let _propKey_ be the result of evaluating |PropertyName|.
-        1. ReturnIfAbrupt(_propKey_).
-        1. Let _scope_ be the running execution context's LexicalEnvironment.
-        1. Let _sourceText_ be the source text matched by |GeneratorMethod|.
-        1. Let _closure_ be OrdinaryFunctionCreate(%GeneratorFunction.prototype%, _sourceText_, |UniqueFormalParameters|, |GeneratorBody|, ~non-lexical-this~, _scope_).
-        1. Perform MakeMethod(_closure_, _object_).
-        1. Perform SetFunctionName(_closure_, _propKey_).
-        1. Let _prototype_ be ! OrdinaryObjectCreate(%GeneratorFunction.prototype.prototype%).
-        1. Perform DefinePropertyOrThrow(_closure_, *"prototype"*, PropertyDescriptor { [[Value]]: _prototype_, [[Writable]]: *true*, [[Enumerable]]: *false*, [[Configurable]]: *false* }).
-        1. Let _desc_ be the PropertyDescriptor { [[Value]]: _closure_, [[Writable]]: *true*, [[Enumerable]]: _enumerable_, [[Configurable]]: *true* }.
-        1. Return ? DefinePropertyOrThrow(_object_, _propKey_, _desc_).
-      </emu-alg>
     </emu-clause>
 
     <emu-clause id="sec-generator-function-definitions-runtime-semantics-namedevaluation">
@@ -20693,27 +20710,6 @@
       <emu-note>
         <p>An anonymous |AsyncGeneratorDeclaration| can only occur as part of an `export default` declaration.</p>
       </emu-note>
-    </emu-clause>
-
-    <emu-clause id="sec-asyncgenerator-definitions-propertydefinitionevaluation">
-      <h1>Runtime Semantics: PropertyDefinitionEvaluation</h1>
-      <p>With parameter _object_ and _enumerable_.</p>
-      <emu-grammar>
-        AsyncGeneratorMethod : `async` `*` PropertyName `(` UniqueFormalParameters `)` `{` AsyncGeneratorBody `}`
-      </emu-grammar>
-      <emu-alg>
-        1. Let _propKey_ be the result of evaluating |PropertyName|.
-        1. ReturnIfAbrupt(_propKey_).
-        1. Let _scope_ be the running execution context's LexicalEnvironment.
-        1. Let _sourceText_ be the source text matched by |AsyncGeneratorMethod|.
-        1. Let _closure_ be ! OrdinaryFunctionCreate(%AsyncGeneratorFunction.prototype%, _sourceText_, |UniqueFormalParameters|, |AsyncGeneratorBody|, ~non-lexical-this~, _scope_).
-        1. Perform ! MakeMethod(_closure_, _object_).
-        1. Perform ! SetFunctionName(_closure_, _propKey_).
-        1. Let _prototype_ be ! OrdinaryObjectCreate(%AsyncGeneratorFunction.prototype.prototype%).
-        1. Perform ! DefinePropertyOrThrow(_closure_, *"prototype"*, PropertyDescriptor { [[Value]]: _prototype_, [[Writable]]: *true*, [[Enumerable]]: *false*, [[Configurable]]: *false* }).
-        1. Let _desc_ be PropertyDescriptor { [[Value]]: _closure_, [[Writable]]: *true*, [[Enumerable]]: _enumerable_, [[Configurable]]: *true* }.
-        1. Return ? DefinePropertyOrThrow(_object_, _propKey_, _desc_).
-      </emu-alg>
     </emu-clause>
 
     <emu-clause id="sec-asyncgenerator-definitions-namedevaluation">
@@ -21192,25 +21188,6 @@
         1. Else,
           1. Perform ! Call(_promiseCapability_.[[Reject]], *undefined*, &laquo; _declResult_.[[Value]] &raquo;).
         1. Return Completion { [[Type]]: ~return~, [[Value]]: _promiseCapability_.[[Promise]], [[Target]]: ~empty~ }.
-      </emu-alg>
-    </emu-clause>
-
-    <emu-clause id="sec-async-function-definitions-PropertyDefinitionEvaluation">
-      <h1>Runtime Semantics: PropertyDefinitionEvaluation</h1>
-      <p>With parameters _object_ and _enumerable_.</p>
-      <emu-grammar>
-        AsyncMethod : `async` PropertyName `(` UniqueFormalParameters `)` `{` AsyncFunctionBody `}`
-      </emu-grammar>
-      <emu-alg>
-        1. Let _propKey_ be the result of evaluating |PropertyName|.
-        1. ReturnIfAbrupt(_propKey_).
-        1. Let _scope_ be the LexicalEnvironment of the running execution context.
-        1. Let _sourceText_ be the source text matched by |AsyncMethod|.
-        1. Let _closure_ be ! OrdinaryFunctionCreate(%AsyncFunction.prototype%, _sourceText_, |UniqueFormalParameters|, |AsyncFunctionBody|, ~non-lexical-this~, _scope_).
-        1. Perform ! MakeMethod(_closure_, _object_).
-        1. Perform ! SetFunctionName(_closure_, _propKey_).
-        1. Let _desc_ be the PropertyDescriptor { [[Value]]: _closure_, [[Writable]]: *true*, [[Enumerable]]: _enumerable_, [[Configurable]]: *true* }.
-        1. Return ? DefinePropertyOrThrow(_object_, _propKey_, _desc_).
       </emu-alg>
     </emu-clause>
 
