--- a/spec.html
+++ b/spec.html
@@ -6998,6 +6998,72 @@
       1. Return ? DefinePropertyOrThrow(_object_, _propKey_, _desc_).
     </emu-alg>
   </emu-clause>
+
+  <emu-clause id="sec-runtime-semantics-argumentlistevaluation" type="sdo" aoid="ArgumentListEvaluation">
+    <h1>Runtime Semantics: ArgumentListEvaluation</h1>
+    <emu-grammar>TemplateLiteral : NoSubstitutionTemplate</emu-grammar>
+    <emu-alg>
+      1. Let _templateLiteral_ be this |TemplateLiteral|.
+      1. Let _siteObj_ be GetTemplateObject(_templateLiteral_).
+      1. Return a List whose sole element is _siteObj_.
+    </emu-alg>
+    <emu-grammar>TemplateLiteral : SubstitutionTemplate</emu-grammar>
+    <emu-alg>
+      1. Let _templateLiteral_ be this |TemplateLiteral|.
+      1. Let _siteObj_ be GetTemplateObject(_templateLiteral_).
+      1. Let _remaining_ be ? ArgumentListEvaluation of |SubstitutionTemplate|.
+      1. Return a List whose first element is _siteObj_ and whose subsequent elements are the elements of _remaining_.
+    </emu-alg>
+    <emu-grammar>SubstitutionTemplate : TemplateHead Expression TemplateSpans</emu-grammar>
+    <emu-alg>
+      1. Let _firstSubRef_ be the result of evaluating |Expression|.
+      1. Let _firstSub_ be ? GetValue(_firstSubRef_).
+      1. Let _restSub_ be ? SubstitutionEvaluation of |TemplateSpans|.
+      1. Assert: _restSub_ is a List.
+      1. Return a List whose first element is _firstSub_ and whose subsequent elements are the elements of _restSub_. _restSub_ may contain no elements.
+    </emu-alg>
+    <emu-grammar>Arguments : `(` `)`</emu-grammar>
+    <emu-alg>
+      1. Return a new empty List.
+    </emu-alg>
+    <emu-grammar>ArgumentList : AssignmentExpression</emu-grammar>
+    <emu-alg>
+      1. Let _ref_ be the result of evaluating |AssignmentExpression|.
+      1. Let _arg_ be ? GetValue(_ref_).
+      1. Return a List whose sole element is _arg_.
+    </emu-alg>
+    <emu-grammar>ArgumentList : `...` AssignmentExpression</emu-grammar>
+    <emu-alg>
+      1. Let _list_ be a new empty List.
+      1. Let _spreadRef_ be the result of evaluating |AssignmentExpression|.
+      1. Let _spreadObj_ be ? GetValue(_spreadRef_).
+      1. Let _iteratorRecord_ be ? GetIterator(_spreadObj_).
+      1. Repeat,
+        1. Let _next_ be ? IteratorStep(_iteratorRecord_).
+        1. If _next_ is *false*, return _list_.
+        1. Let _nextArg_ be ? IteratorValue(_next_).
+        1. Append _nextArg_ as the last element of _list_.
+    </emu-alg>
+    <emu-grammar>ArgumentList : ArgumentList `,` AssignmentExpression</emu-grammar>
+    <emu-alg>
+      1. Let _precedingArgs_ be ? ArgumentListEvaluation of |ArgumentList|.
+      1. Let _ref_ be the result of evaluating |AssignmentExpression|.
+      1. Let _arg_ be ? GetValue(_ref_).
+      1. Append _arg_ to the end of _precedingArgs_.
+      1. Return _precedingArgs_.
+    </emu-alg>
+    <emu-grammar>ArgumentList : ArgumentList `,` `...` AssignmentExpression</emu-grammar>
+    <emu-alg>
+      1. Let _precedingArgs_ be ? ArgumentListEvaluation of |ArgumentList|.
+      1. Let _spreadRef_ be the result of evaluating |AssignmentExpression|.
+      1. Let _iteratorRecord_ be ? GetIterator(? GetValue(_spreadRef_)).
+      1. Repeat,
+        1. Let _next_ be ? IteratorStep(_iteratorRecord_).
+        1. If _next_ is *false*, return _precedingArgs_.
+        1. Let _nextArg_ be ? IteratorValue(_next_).
+        1. Append _nextArg_ as the last element of _precedingArgs_.
+    </emu-alg>
+  </emu-clause>
 <!-- insert sdos here -->
 </emu-clause>
 
@@ -13923,32 +13989,6 @@
         </emu-alg>
       </emu-clause>
 
-      <emu-clause id="sec-template-literals-runtime-semantics-argumentlistevaluation">
-        <h1>Runtime Semantics: ArgumentListEvaluation</h1>
-        <emu-see-also-para op="ArgumentListEvaluation"></emu-see-also-para>
-        <emu-grammar>TemplateLiteral : NoSubstitutionTemplate</emu-grammar>
-        <emu-alg>
-          1. Let _templateLiteral_ be this |TemplateLiteral|.
-          1. Let _siteObj_ be GetTemplateObject(_templateLiteral_).
-          1. Return a List whose sole element is _siteObj_.
-        </emu-alg>
-        <emu-grammar>TemplateLiteral : SubstitutionTemplate</emu-grammar>
-        <emu-alg>
-          1. Let _templateLiteral_ be this |TemplateLiteral|.
-          1. Let _siteObj_ be GetTemplateObject(_templateLiteral_).
-          1. Let _remaining_ be ? ArgumentListEvaluation of |SubstitutionTemplate|.
-          1. Return a List whose first element is _siteObj_ and whose subsequent elements are the elements of _remaining_.
-        </emu-alg>
-        <emu-grammar>SubstitutionTemplate : TemplateHead Expression TemplateSpans</emu-grammar>
-        <emu-alg>
-          1. Let _firstSubRef_ be the result of evaluating |Expression|.
-          1. Let _firstSub_ be ? GetValue(_firstSubRef_).
-          1. Let _restSub_ be ? SubstitutionEvaluation of |TemplateSpans|.
-          1. Assert: _restSub_ is a List.
-          1. Return a List whose first element is _firstSub_ and whose subsequent elements are the elements of _restSub_. _restSub_ may contain no elements.
-        </emu-alg>
-      </emu-clause>
-
       <emu-clause id="sec-gettemplateobject" aoid="GetTemplateObject">
         <h1>GetTemplateObject ( _templateLiteral_ )</h1>
         <p>The abstract operation GetTemplateObject takes argument _templateLiteral_ (a Parse Node). It performs the following steps when called:</p>
@@ -14538,52 +14578,6 @@
       <emu-note>
         <p>The evaluation of an argument list produces a List of values.</p>
       </emu-note>
-
-      <emu-clause id="sec-argument-lists-runtime-semantics-argumentlistevaluation">
-        <h1>Runtime Semantics: ArgumentListEvaluation</h1>
-        <emu-see-also-para op="ArgumentListEvaluation"></emu-see-also-para>
-        <emu-grammar>Arguments : `(` `)`</emu-grammar>
-        <emu-alg>
-          1. Return a new empty List.
-        </emu-alg>
-        <emu-grammar>ArgumentList : AssignmentExpression</emu-grammar>
-        <emu-alg>
-          1. Let _ref_ be the result of evaluating |AssignmentExpression|.
-          1. Let _arg_ be ? GetValue(_ref_).
-          1. Return a List whose sole element is _arg_.
-        </emu-alg>
-        <emu-grammar>ArgumentList : `...` AssignmentExpression</emu-grammar>
-        <emu-alg>
-          1. Let _list_ be a new empty List.
-          1. Let _spreadRef_ be the result of evaluating |AssignmentExpression|.
-          1. Let _spreadObj_ be ? GetValue(_spreadRef_).
-          1. Let _iteratorRecord_ be ? GetIterator(_spreadObj_).
-          1. Repeat,
-            1. Let _next_ be ? IteratorStep(_iteratorRecord_).
-            1. If _next_ is *false*, return _list_.
-            1. Let _nextArg_ be ? IteratorValue(_next_).
-            1. Append _nextArg_ as the last element of _list_.
-        </emu-alg>
-        <emu-grammar>ArgumentList : ArgumentList `,` AssignmentExpression</emu-grammar>
-        <emu-alg>
-          1. Let _precedingArgs_ be ? ArgumentListEvaluation of |ArgumentList|.
-          1. Let _ref_ be the result of evaluating |AssignmentExpression|.
-          1. Let _arg_ be ? GetValue(_ref_).
-          1. Append _arg_ to the end of _precedingArgs_.
-          1. Return _precedingArgs_.
-        </emu-alg>
-        <emu-grammar>ArgumentList : ArgumentList `,` `...` AssignmentExpression</emu-grammar>
-        <emu-alg>
-          1. Let _precedingArgs_ be ? ArgumentListEvaluation of |ArgumentList|.
-          1. Let _spreadRef_ be the result of evaluating |AssignmentExpression|.
-          1. Let _iteratorRecord_ be ? GetIterator(? GetValue(_spreadRef_)).
-          1. Repeat,
-            1. Let _next_ be ? IteratorStep(_iteratorRecord_).
-            1. If _next_ is *false*, return _precedingArgs_.
-            1. Let _nextArg_ be ? IteratorValue(_next_).
-            1. Append _nextArg_ as the last element of _precedingArgs_.
-        </emu-alg>
-      </emu-clause>
     </emu-clause>
 
     <emu-clause id="sec-optional-chains">
